# antigo

./: CMakeLists.txt  README.md  antigo-config.cmake.in
include/antigo/: Context.h  ExecutionData.h  ResolvedContext.h
include/antigo/impl/: complex_values.h  test_helpers.h
include_stub/antigo/: Context.h  ResolvedContext.h
include_stub/antigo/impl/: complex_values.h
src/antigo/: Context.cpp  ResolvedContext.cpp
src/antigo/impl/: ExecutionData.cpp  ExecutionData.h  OnstackContextImpl.cpp  OnstackContextImpl.h
src_stub/: antigo_stub.cpp
unit/src/: ContextTest.cpp
